--- a/grid.html
+++ b/grid.html
@@ -32,13 +32,26 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-2">1 of 2</div>
-        <div class="col">2 of 2</div>
+        <div class="col-1"></div>
+        <div class="col offset-md-1"></div>
+        <div class="col-1 offset-md-1"></div>
       </div>
-      <div class="row">
-        <div class="col-8">1 of 3</div>
-        <div class="col">2 of 3</div>
-        <div class="col">3 of 3</div>
+      <div class="row justify-content-between">
+        <div class="col-8"></div>
+        <div class="col-1"></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row justify-content-between">
+        <div class="col-1"></div>
+        <div class="col-2"></div>
+        <div class="col-8"></div>
+      </div>
+      <div class="row justify-content-between">
+        <div class="col-2"></div>
+        <div class="col-1"></div>
+        <div class="col-2"></div>
+        <div class="col-1"></div>
+        <div class="col-2"></div>
       </div>
     </div>
 
